syntax = "proto3";

package com.road.yishi.proto.campaign;

message ReplacementMsg {
  string stateStr = 1;
}
