syntax = "proto3";

package com.road.yishi.proto.campaign;

message WorldBossStateMsg {
  repeated int32 worldBossInfo = 1;
}
