syntax = "proto3";

package com.road.yishi.proto.campaign;

message WorldBossWoundRewardListMsg {
  repeated int32 rewardinfo = 1;
}
